[package]
name = "getter-derive-rs"
description = "A dead-simple and intentional getter derive macro crate."
version = "1.0.0"
authors = ["Utkarsh Bhardwaj (Passeriform) <passeriform.ub@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Passeriform/getter-derive-rs"
homepage = "https://www.passeriform.com/prod/getter-derive-rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.19"
quote = "1.0.4"
proc-macro2 = "1.0.12"
